  (Xavier Leroy, report by @anentropic, review by Gabriel Scherer)

### Manual and documentation:

- #7812, #10475: reworded the description of the behaviors of
  float->int conversions in case of overflow, and of iterators
  in case of concurrent modifications.
  (Xavier Leroy, report by whitequark, review by David Allsopp)

### Compiler user-interface and warnings:

- #10328: Give more precise error when disambiguation could not possibly work.
  (Leo White, review by Gabriel Scherer and Florian Angeletti)

- #10361: Improve error messages for mismatched record and variant
  definitions.
  (Florian Angeletti, review by Gabriel Radanne and Gabriel Scherer)

- #10407: Produce more detailed error messages that contain full error traces
  when module inclusion fails.
  (Antal Spector-Zabusky, review by Florian Angeletti)

- #10531: add naked_pointers to ocamlc -config exporting NAKED_POINTERS from
  Makefile.config.
  (Damien Doligez, review by Mark Shinwell and Gabriel Scherer)

### Internal/compiler-libs changes:

- #1599: add unset directive to ocamltest to clear environment variables before
  running tests.
  (David Allsopp, review by Damien Doligez and Sébastien Hinderer)

- #10433: Remove the distinction between 32-bit aligned and 64-bit aligned
  64-bit floats in Cmm.memory_chunk.
  (Greta Yorsh, review by Xavier Leroy)

- #10434: Pun labelled arguments with type constraint in function applications.
  (Greta Yorsh, review by Nicolas Chataing and Nicolás Ojeda Bär)

- #10470: Remove unused `cstr_normal` field from the `constructor_description`
  type
  (Nicolas Chataing, review by Gabriel Scherer)

- #10472: refactor caml_sys_random_seed to ease future Multicore changes
  (Gabriel Scherer, review by Xavier Leroy)

- #10487: Move logic to get the type path from a constructor return type in
  Types
  (Nicolas Chataing, review by Jacques Garrigue)

- #10555: Do not use ghost locations for type constraints