@@ -127,7 +127,6 @@
 \fi
 }{}
 
-\newcommand{\?}{\color{black}\normalsize\tt\#{}}
 
 \ifocamldoc\else
 \lstnewenvironment{ocamlcodeblock}{
@@ -188,7 +187,6 @@
 \usepackage[strings,nohyphen]{underscore}
 
 %\makeatletter \def\@wrindex#1#2{\xdef \@indexfile{\csname #1@idxfile\endcsname}\@@wrindex#2||\\}\makeatother
-\def\th{^{\hbox{\scriptsize th}}}
 
 
 \raggedbottom
