@@ -86,6 +86,9 @@ Working version
   in case of concurrent modifications.
   (Xavier Leroy, report by whitequark, review by David Allsopp)
 
+- #10605: manual, name few css classes to ease styling and maintainability.
+  (Florian Angeletti, review by Wiktor Kuchta and Gabriel Scherer)
+
 ### Compiler user-interface and warnings:
 
 - #10328: Give more precise error when disambiguation could not possibly work.
